# cuda-3dgs-renderer

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  config.ps1.example  generate_figures.py  paper_final.tex  run_all_benchmarks.ps1
benchmark_data/: cactus_splat3_30kSteps_142k_splats_benchmark.csv  cactus_splat3_30kSteps_209k_splats_benchmark.csv  cactus_splat3_30kSteps_464k_splats_benchmark.csv  cactus_splat3_30kSteps_719k_splats_benchmark.csv
benchmark_data/benchmark_results/: benchmark_summary.csv  cactus_splat3_11kSteps_1.5M_splats_benchmark.csv  cactus_splat3_25kSteps_2M_splats_benchmark.csv  cactus_splat3_30kSteps_142k_splats_benchmark.csv  cactus_splat3_30kSteps_209k_splats_benchmark.csv  cactus_splat3_30kSteps_464k_splats_benchmark.csv  cactus_splat3_30kSteps_719k_splats_benchmark.csv
benchmark_data/benchmark_results_opt1/: benchmark_summary.csv  cactus_splat3_11kSteps_1.5M_splats_benchmark.csv  cactus_splat3_25kSteps_2M_splats_benchmark.csv  cactus_splat3_30kSteps_142k_splats_benchmark.csv  cactus_splat3_30kSteps_209k_splats_benchmark.csv  cactus_splat3_30kSteps_464k_splats_benchmark.csv  cactus_splat3_30kSteps_719k_splats_benchmark.csv
benchmark_data/benchmark_results_opt2/: benchmark_summary.csv  cactus_splat3_11kSteps_1.5M_splats_benchmark.csv  cactus_splat3_25kSteps_2M_splats_benchmark.csv  cactus_splat3_30kSteps_142k_splats_benchmark.csv  cactus_splat3_30kSteps_209k_splats_benchmark.csv  cactus_splat3_30kSteps_464k_splats_benchmark.csv  cactus_splat3_30kSteps_719k_splats_benchmark.csv
benchmark_data/benchmark_results_opt3/: benchmark_summary.csv  cactus_splat3_11kSteps_1.5M_splats_benchmark.csv  cactus_splat3_25kSteps_2M_splats_benchmark.csv  cactus_splat3_30kSteps_142k_splats_benchmark.csv  cactus_splat3_30kSteps_209k_splats_benchmark.csv  cactus_splat3_30kSteps_464k_splats_benchmark.csv  cactus_splat3_30kSteps_719k_splats_benchmark.csv
benchmark_data/benchmark_results_opt4/: benchmark_summary.csv  cactus_splat3_11kSteps_1.5M_splats_benchmark.csv  cactus_splat3_25kSteps_2M_splats_benchmark.csv  cactus_splat3_30kSteps_142k_splats_benchmark.csv  cactus_splat3_30kSteps_209k_splats_benchmark.csv  cactus_splat3_30kSteps_464k_splats_benchmark.csv  cactus_splat3_30kSteps_719k_splats_benchmark.csv
shaders/: gaussian.frag  quad.vert
(+10 files in other folders)
